# mealie-kroger

./: README.md  pyproject.toml
.github/workflows/: docker-img.yml
docker/: Dockerfile  docker-compose.yml
mealie_kroger/: app.py  kroger.py  mealie.py  oauth.py
mealie_kroger/templates/: add-to-cart.html.j2  index.html.j2  link-foods.html.j2
