[tool.poetry]
name = "mealie-kroger"
version = "0.1.0"
description = ""
authors = ["Sam Cohen <samc1213@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.24.0.post1"
authlib = "^1.2.1"
fastapi = "^0.104.1"
requests = "^2.31.0"
itsdangerous = "^2.1.2"
jinja2 = "^3.1.2"
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
